# std-compat

./: .gitignore  CMakeLists.txt  LICENSE  appveyor.yml
.appveyor/: _appveyor_precommit.ps1  dispatch_build.ps1  merge_matrices.ps1
.appveyor/.repo-hooks/: install-git-hooks.ps1
.appveyor/hooks/: install-git-hooks.ps1  pre-commit
.appveyor/mingw/: build.ps1  matrix.yml
.appveyor/msvc/: build.ps1  matrix.yml
any/: any
ci/: setup-vs-env.cmd
cmake/: StdCompatAPI.cmake  StdCompatAPIInternal.cmake  std-compatAPI.cmake
common/: msvc_crt_version.h
docs/: UCRT_CPP_MAP.md
expected/: expected
span/: span
src/: CMakeLists.txt
src/any/: CMakeLists.txt
src/any/include/: any
src/common/: CMakeLists.txt
src/common/include/std-compat/: crt_patches.h
src/common/include/std-compat/internal/: compiler_clang.h  compiler_gcc.h  compiler_msvc.h  crt_apple.h  crt_bionic.h  crt_libcxx.h  crt_libstdcxx.h  crt_mingw.h  crt_msvc.h  crt_musl.h  crt_newlib.h  detect_compiler.h  detect_crt.h  msvc_crt_version.h
src/common/include/std-compat/internal/crt_patches/: mingw_4.8_std_to_string.h  patches.h  patches_mingw.h
src/common/include/std-compat/internal/mingw/: 4.8_std_to_string.h
src/expected/: CMakeLists.txt
src/expected/include/: expected  expected_compatibility
src/filesystem/: CMakeLists.txt
src/filesystem/include/: filesystem
src/optional/: CMakeLists.txt  README.md
src/optional/include/: optional
src/optional/include/std-compat/internal/: no_functional_patch.h  optional.hpp
src/optional/include/std-compat/internal/patches/: 0001_patch_tl-optional_for_MinGW.patch
src/span/: CMakeLists.txt
src/span/include/: span
src/variant/: CMakeLists.txt  README.md
src/variant/include/: variant
src/variant/include/std-compat/internal/: monostate_compat.h  variant.hpp  variant_compat.h  variant_compat_msvc.h
tests/: CMakeLists.txt  tst_StdCompatibilityLayer.cpp
tests/any/: CMakeLists.txt  tst_any.cpp
tests/common/: testing.h
tests/expected/: CMakeLists.txt  tst_expected.cpp
tests/filesystem/: CMakeLists.txt  tst_filesystem.cpp
tests/optional/: CMakeLists.txt  tst_optional.cpp
tests/span/: CMakeLists.txt  tst_span.cpp
tests/variant/: CMakeLists.txt  tst_variant.cpp
tools/: CMakeLists.txt
tools/check_ucrt_version/: CMakeLists.txt  main.cpp
tools/crt_version_check/: CMakeLists.txt  crt_apple.h  crt_bionic.h  crt_detect.h  crt_libcxx.h  crt_libstdcxx.h  crt_mingw.h  crt_msvc.h  crt_musl.h  crt_newlib.h  crt_version_check.cpp
variant/: variant
